# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py
hooks/: detect-secrets  script_must_have_extension  script_must_not_have_extension  shellcheck  shfmt
